All typography changes

--- a/medical-database/public/css/hospStyles.css
+++ b/medical-database/public/css/hospStyles.css
@@ -46,7 +46,7 @@
 
 	/*About text*/
 	color: #FFFFFF;
-	font-family: OratorStd;
+	font-family: 'Dosis', sans-serif;
 	font-size: 120%;
 	text-align: center;
 }
@@ -64,7 +64,7 @@
 
 	/*About text*/
 	color: #000000;
-	font-family: OratorStd;
+	font-family: 'Dosis', sans-serif;
 	font-size: 120%;
 	text-align: center;
 }
@@ -82,7 +82,7 @@
 	cursor: pointer;
 
 	color: #FFFFFF;
-	font-family: OratorStd;
+	font-family: 'Dosis', sans-serif;
 	font-size: 100%;
 	text-align: center;
 }
@@ -95,7 +95,7 @@
 	cursor: pointer;
     border-radius: 80px;
 	font-size: 120%;
-	font-family: OratorStd;
+	font-family: 'Dosis', sans-serif;
 	color: #FFFFFF;
     height: 50px;
     width: 200px;
@@ -117,7 +117,7 @@ body {
 h1 {
 
 	color: #D90404;
-	font-family: Norwester;
+	font-family: 'Fjalla One', sans-serif;
 	font-size: 400%;
 	text-align: center;
 }
@@ -126,7 +126,7 @@ h1 {
 h2 {
 
 	color: #D90404;
-	font-family: OratorStd;
+	font-family: 'Dosis', sans-serif;
 	font-size: 200%;
 	text-align: center;
 }
