--- a/medical-database/public/css/app.css
+++ b/medical-database/public/css/app.css
@@ -1,5 +1,47 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
+.box2 {
+
+	background-color: #FFFFFF;
+	width: 90%;
+	text-align: center;
+	position: absolute;
+	left: 5%;
+	height: 30%;
+}
+
+.box3{
+
+	background-color: #2A948D;
+	position: absolute;
+	text-align: center;
+	height: 10%;
+	width: 95%;
+	top: 30%;
+	left: 2%;
+
+	font-family: 'Dosis', sans-serif;
+	font-size: 250%;
+	color: #FFFFFF;
+	text-align: center;
+}
+
+.box4{
+
+	background-color: #FFFFFF;
+	position: absolute;
+	top: 40%;
+	width: 90%;
+	height: 100%;
+	left: 5%;
+}
+
+.pildora {
+
+	position: absolute;
+	left: 70%;
+}
+
 /**
 * Center elements log in template
 */
@@ -32,7 +74,8 @@
 
 .form-group {
 
-	text-align: center;
+	position: absolute;
+	left: 63%;
 }
 
 /**
@@ -41,14 +84,17 @@
 [type="email"]{
 
 	font-family: 'Dosis', sans-serif;
-	font-size: 150%;
+	font-size: 100%;
 	color: #BDBDBD;
 	text-align: center;
+
+	position: absolute;
+	top: 1000%;
 
 	border-radius: 80px;
 	border: 3px;
 	border-color: #2A948D;
-	width: 25%;
+	width: 100%;
 }
 
 /**
@@ -57,7 +103,7 @@
 [type="password"]{
 
 	font-family: 'Dosis', sans-serif;
-	font-size: 150%;
+	font-size: 100%;
 	color: #BDBDBD;
 	text-align: center;
 	border-radius: 80px;
@@ -116,8 +162,8 @@ h2 {
 h3 {
 
 	font-family: 'Dosis', sans-serif;
-	font-size: 250%;
-	color: #FFFFFF;
+	font-size: 150%;
+	color: #2A948D;
 	text-align: center;
 }
 
@@ -139,10 +185,18 @@ h5 {
 
 	font-family: 'Dosis', sans-serif;
 	font-size: 150%;
-	color: #FFFFFF;
+	color: #2A948D;
 	text-align: center;
 }
 
 h6 {
-	background-color: #FFFFFF;
+
+	font-family: 'Dosis', sans-serif;
+	font-size: 150%;
+	color: #FFFFFF;
+	text-align: center;
 }
+
+/*h6 {
+	background-color: #FFFFFF;
+}*/
