--- a/medical-database/public/css/styles.css
+++ b/medical-database/public/css/styles.css
@@ -67,9 +67,9 @@
 	display: inline-block;
 }
 
-.regular-checkbox:active, .regular-checkbox:checked:active {
+/*.regular-checkbox:active, .regular-checkbox:checked:active {
 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
-}
+}*/
 
 .regular-checkbox:checked {
 	background-color: #2A948D;
@@ -78,32 +78,9 @@
 }
 
 /*Change of colors for checkbox depending on its state (checked, not checked)*/
-[type="checkbox"] {
+[type="radio"] {
   position: absolute;
   left: 500px;
-}
-
-[type="checkbox"]:not(:checked) + label:after {
-  	color: #FFFFFF;
-}
-
-[type="checkbox"]:checked + label {
-  	color: #FFFFFF;
-}
-
-[type="checkbox"] + label {
-
-	/*About checkbox*/
-	display: block;
-	position: relative;
-	padding-left: 50px;
-	cursor: pointer;
-	left: 40%;
-
-	/*About typography*/
-	font-size: 20px;
-	font-family: 'Dosis', sans-serif;
-	color: #2A948D;
 }
 
 [type="text"]{
@@ -164,4 +141,13 @@ h2 {
 	color: #BDBDBD;
 	font-family: 'Dosis', sans-serif;
 	font-size: 150%;
+}
+
+h3 {
+
+	color: #2A948D;
+	font-family: 'Dosis', sans-serif;
+	font-size: 100%;
+	position: relative;
+	left: 45%;
 }
