--- a/medical-database/public/css/styles.css
+++ b/medical-database/public/css/styles.css
@@ -109,7 +109,7 @@ select{
 	position: absolute;
 	left: 40%;
 	width: 250px;
-	top: 115%;
+	/*top: 115%;*/
 	border-radius: 80px;
 	border-color: #2A948D;
 
