--- a/medical-database/public/css/styles.css
+++ b/medical-database/public/css/styles.css
@@ -67,9 +67,6 @@
 	display: inline-block;
 }
 
-/*.regular-checkbox:active, .regular-checkbox:checked:active {
-	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
-}*/
 
 .regular-checkbox:checked {
 	background-color: #2A948D;
@@ -101,14 +98,14 @@
   	top: 125%;
 }
 
-select{
-		
+.docMenu {
+
 	/*About the box*/
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	position: absolute;
-	left: 40%;
 	width: 250px;
+	left: 40%;
 	/*top: 115%;*/
 	border-radius: 80px;
 	border-color: #2A948D;
@@ -117,7 +114,7 @@ select{
 	font-family: 'Dosis', sans-serif;
 	font-size: 20px;
 	color: #BDBDBD;
-	
+
 }
 
 /*Body*/
