--- a/medical-database/public/css/app.css
+++ b/medical-database/public/css/app.css
@@ -139,7 +139,7 @@
 	position: relative;
 
 	font-family: 'Fjalla One', sans-serif;
-	color: #2A948D;
+	color: #D90404;
 	text-align: center;
 	font-size: 100%;
 	left: 5%;
@@ -158,7 +158,7 @@
 	position: relative;
 
 	font-family: 'Fjalla One', sans-serif;
-	color: #2A948D;
+	color: #D90404;
 	text-align: center;
 	font-size: 100%;
 	left: 55%;
@@ -169,6 +169,42 @@
 	width: 40%;
 
 	cursor: pointer;
+}
+
+/*Sign up button*/
+.button4{
+
+	background-color: #2A948D;
+	border: 1px;
+	cursor: pointer;
+    border-radius: 80px;
+	font-size: 120%;
+	font-family: 'Dosis', sans-serif;
+	color: #FFFFFF;
+    height: 50px;
+    width: 200px;
+
+    position:absolute;
+    top:60%;
+    left:20%;
+}
+
+/*Sign up button*/
+.button5{
+
+	background-color: #2A948D;
+	border: 1px;
+	cursor: pointer;
+    border-radius: 80px;
+	font-size: 120%;
+	font-family: 'Dosis', sans-serif;
+	color: #FFFFFF;
+    height: 50px;
+    width: 200px;
+
+    position:absolute;
+    top:60%;
+    left:60%;
 }
 
 body {
@@ -191,4 +227,11 @@ h2 {
 	font-family: 'Dosis', sans-serif;
 	font-size: 120%;
 	color: #2A948D;
+}
+
+h3 {
+
+	color: #BDBDBD;
+	font-family: 'Dosis', sans-serif;
+	font-size: 150%;
 }
