--- a/medical-database/public/css/app.css
+++ b/medical-database/public/css/app.css
@@ -85,7 +85,7 @@
 	font-family: 'Dosis', sans-serif;
 	font-size: 120%;
 	color: #D90404;
-	width: 20%;
+	width: 30%;
 
 	border-radius: 80px;
 	border-color: #2A948D;
@@ -205,6 +205,25 @@
     position:absolute;
     top:60%;
     left:60%;
+}
+
+select {
+
+	/*About the box*/
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	position: absolute;
+	width: 250px;
+	left: 40%;
+	/*top: 115%;*/
+	border-radius: 80px;
+	border-color: #2A948D;
+
+	/*About the typography*/
+	font-family: 'Dosis', sans-serif;
+	font-size: 20px;
+	color: #BDBDBD;
+
 }
 
 body {
